refactor togglz servlet (#1045)