@@ -1,5 +1,6 @@
 package org.togglz.servlet.activation;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.togglz.core.activation.Parameter;
@@ -10,19 +11,13 @@ import org.togglz.core.user.FeatureUser;
 import org.togglz.core.util.Strings;
 import org.togglz.servlet.util.HttpServletRequestHolder;
 
-import jakarta.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
-import java.util.AbstractMap;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.regex.Pattern;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class QueryParameterActivationStrategy implements ActivationStrategy {
 
@@ -45,7 +40,6 @@ public class QueryParameterActivationStrategy implements ActivationStrategy {
 
     @Override
     public boolean isActive(FeatureState featureState, FeatureUser user) {
-
         HttpServletRequest request = HttpServletRequestHolder.get();
         if (request == null) {
             return false;
@@ -57,23 +51,18 @@ public class QueryParameterActivationStrategy implements ActivationStrategy {
         }
         String[] triggerParams = SPLIT_ON_COMMA.split(triggerParamsString.trim());
 
-        Map<String, String[]> actualParams = new HashMap<>();
-        actualParams.putAll(request.getParameterMap());
+        Map<String, String[]> actualParams = new HashMap<>(request.getParameterMap());
         String referer = request.getHeader("referer");
         if (referer != null) {
             for (Map.Entry<String, List<String>> entry : getRefererParameters(actualParams, referer).entrySet()) {
-                actualParams.put(entry.getKey(), entry.getValue().toArray(new String[entry.getValue().size()]));
+                actualParams.put(entry.getKey(), entry.getValue().toArray(new String[0]));
             }
         }
-
         return isTriggerParamPresent(actualParams, triggerParams);
-
     }
 
     private Map<String, List<String>> getRefererParameters(Map<String, String[]> requestParams, String referer) {
-
         Map<String, List<String>> result = new HashMap<>();
-
         try {
             for (Map.Entry<String, String> pair : getQueryParams(new URI(referer))) {
                 if (!requestParams.containsKey(pair.getKey())) {
@@ -89,28 +78,22 @@ public class QueryParameterActivationStrategy implements ActivationStrategy {
         } catch (URISyntaxException e) {
             log.warn("Ignoring invalid referer: " + referer);
         }
-
         return result;
-
     }
 
     private List<Map.Entry<String, String>> getQueryParams(URI uri) {
-        try {
-            List<Map.Entry<String, String>> result = new ArrayList<>();
-            if (Strings.isNotBlank(uri.getQuery())) {
-                for (String pair : uri.getQuery().split("&")) {
-                    int idx = pair.indexOf("=");
-                    String key = idx > 0 ?
-                        URLDecoder.decode(pair.substring(0, idx), "UTF-8") : pair;
-                    String value = idx > 0 && pair.length() > idx + 1 ?
-                        URLDecoder.decode(pair.substring(idx + 1), "UTF-8") : null;
-                    result.add(new AbstractMap.SimpleEntry<>(key, value));
-                }
+        List<Map.Entry<String, String>> result = new ArrayList<>();
+        if (Strings.isNotBlank(uri.getQuery())) {
+            for (String pair : uri.getQuery().split("&")) {
+                int idx = pair.indexOf("=");
+                String key = idx > 0 ?
+                        URLDecoder.decode(pair.substring(0, idx), UTF_8) : pair;
+                String value = idx > 0 && pair.length() > idx + 1 ?
+                        URLDecoder.decode(pair.substring(idx + 1), UTF_8) : null;
+                result.add(new AbstractMap.SimpleEntry<>(key, value));
             }
-            return result;
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalStateException(e);
         }
+        return result;
     }
 
     private boolean isTriggerParamPresent(Map<String, String[]> actualParams, String[] triggerParams) {
